# Machine-Translation

./: README.md
python/: Dockerfile  cli.py  pyproject.toml
python/mt_code/: config.py  train.py
python/mt_code/data/: processing.py
python/mt_code/training/: initializers.py  temp.py
